--- a/styleportfolio.css
+++ b/styleportfolio.css
@@ -151,7 +151,7 @@ body, html {
     width: 155px;
     margin: 0 0em;
     padding: 0.2em 0.2em;
-    background: rgb(0, 237, 255);
+    background: rgb(248, 40, 118);
     color: white;
     border: 4px solid white; /* Add a white border */
     border-radius: 20px;
@@ -170,7 +170,7 @@ body, html {
     width: 155px;
     margin: 0 0em;
     padding: 0.2em 0.2em;
-    background: rgb(248, 40, 118);
+    background: rgb(0, 237, 255);
     color: white;
     border: 4px solid white; /* Add a white border */
     border-radius: 20px;
@@ -215,4 +215,66 @@ body, html {
 }
 button:hover {
     transform: scale(1.1); /* Agrandit légèrement le bouton */
+}
+/* Styles pour le cercle bleu */
+.blue-circle2 {
+    width: 375px; /* Diamètre du cercle */
+    height: 375px; /* Diamètre du cercle */
+    background-color: rgb(0, 0, 0); /* Couleur du cercle */
+    border: 8px solid rgb(0, 237, 255); /* Add a white border */
+    border-radius: 50%; /* Pour rendre l'élément circulaire */
+    position: absolute;
+    bottom: 25%; /* Distance du haut de la page */
+    right: -100px; /* Distance de la gauche de la page */
+    z-index: 1; /* Pour s'assurer qu'il est derrière le contenu principal */
+}
+
+/* Styles pour le cercle rose */
+.pink-circle2 {
+   width: 325px; /* Diamètre du cercle */
+    height: 325px; /* Diamètre du cercle */
+    background-color: rgb(0, 0, 0); /* Couleur du cercle */
+    background-image: url('Images/Reflet.jpg');
+    background-size: cover; /* Pour couvrir toute la zone sans déformer l'image */
+    background-position: center; /* Centrer l'image */
+    background-repeat: no-repeat; /* Empêcher la répétition de l'image */
+    border: 8px solid rgb(248, 40, 118); /* Add a white border */
+    border-radius: 50%; /* Pour rendre l'élément circulaire */
+    position: absolute;
+    bottom: 28.25%; /* Distance du haut de la page */
+    right: -75px; /* Distance de la gauche de la page */
+    z-index: 1; /* Pour s'assurer qu'il est derrière le contenu principal */
+}
+
+/* Styles pour le cercle rose */
+.pink-square0 {
+    width: 215px; /* Diamètre du cercle */
+    height: 215px; /* Diamètre du cercle */
+    background-color: rgb(0, 0, 0); /* Couleur du cercle */
+    background-image: url('Images/Tango.jpg');
+    background-size: cover; /* Pour couvrir toute la zone sans déformer l'image */
+    background-position: center; /* Centrer l'image */
+    background-repeat: no-repeat; /* Empêcher la répétition de l'image */
+    border: 8px solid rgb(255, 255, 255); /* Add a white border */
+    border-radius: 0%; /* Pour rendre l'élément circulaire */
+    position: absolute;
+    bottom: -1%; /* Distance du haut de la page */
+    right: -1%; /* Distance de la gauche de la page */
+    z-index: 0; /* Pour s'assurer qu'il est derrière le contenu principal */
+}
+/* Styles pour le cercle rose */
+.pink-square1 {
+    width: 215px; /* Diamètre du cercle */
+    height: 215px; /* Diamètre du cercle */
+    background-color: rgb(0, 0, 0); /* Couleur du cercle */
+    background-image: url('Images/Guesha.jpg');
+    background-size: cover; /* Pour couvrir toute la zone sans déformer l'image */
+    background-position: center; /* Centrer l'image */
+    background-repeat: no-repeat; /* Empêcher la répétition de l'image */
+    border: 8px solid rgb(255, 255, 255); /* Add a white border */
+    border-radius: 0%; /* Pour rendre l'élément circulaire */
+    position: absolute;
+    top: -1%; /* Distance du haut de la page */
+    right: -1%; /* Distance de la gauche de la page */
+    z-index: 0; /* Pour s'assurer qu'il est derrière le contenu principal */
 }
