--- a/styleportfolio.css
+++ b/styleportfolio.css
@@ -418,3 +418,50 @@ button:hover {
     right: -75px; /* Distance de la gauche de la page */
     z-index: 1; /* Pour s'assurer qu'il est derrière le contenu principal */
 }
+.social-media {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left:-423px;
+    font-family: 'Glaciale Indifference';
+    color: white;
+    align-items: center;
+}
+
+.social-media p {
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+
+.social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+.social-icon {
+    width: 24px;
+    height: 24px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    /*text-indent: -9999px; /* Masque le texte du lien */
+    filter: invert(100%) sepia(100%) saturate(500%) hue-rotate(200deg);
+}
+
+.social-icon.facebook {
+    background-image: url('Images/facebook.svg');
+}
+
+.social-icon.behance {
+    background-image: url('Images/behance.svg');
+}
+
+.social-icon.instagram {
+    background-image: url('Images/instagram.svg');
+}
+
+.social-icon:hover { 
+    transform: scale(1.1);
+}
