--- a/styleoeuvresorig.css
+++ b/styleoeuvresorig.css
@@ -282,46 +282,6 @@ button:hover {
     top: 445px; /* Démarre hors de l'écran en bas */
     left: -515px; /* Centre horizontalement */
 }
-
-
-/*Partie de la galerie*/
-.gallery {
-    display: flex;
-    gap: 10px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
-
-.thumbnail img {
-    width: 100px;
-    height: 100px;
-    cursor: pointer;
-    border: 2px solid transparent;
-}
-
-.thumbnail img:hover {
-    border: 2px solid #000;
-}
-
-.image-display {
-    position: absolute;
-    top: 20%;
-    right: 10%;
-    margin-top: 20px;
-    /*display: none;*/
-    text-align: center;
-}
-
-.image-display img {
-    max-width: 100%;
-    height: 500px;
-}
-
-.image-display p {
-    font-size: 18px;
-    margin-top: 10px;
-}
 .social-media {
     margin-top: 20px;
     margin-bottom: 10px;
@@ -368,4 +328,44 @@ button:hover {
 
 .social-icon:hover { 
     transform: scale(1.1);
+}
+/*Partie de la galerie*/
+.gallery {
+    display: flex;
+    gap: 10px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.thumbnail img {
+    width: 100px;
+    height: 100px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid transparent;
+}
+
+.thumbnail img:hover {
+    border: 1Opx solid #ffffff;
+}
+
+.image-display {
+    position: absolute;
+    top: 20%;
+    right: 10%;
+    margin-top: 20px;
+    /*display: none;*/
+    text-align: center;
+}
+
+.image-display img {
+    max-width: 100%;
+    height: 500px;
+}
+
+.image-display p {
+    font-size: 18px;
+    margin-top: 10px;
 }
