--- a/mainaccueil.css
+++ b/mainaccueil.css
@@ -38,7 +38,7 @@ body, html {
 
 /* Styles pour l'image de fond */
 .background-image {
-    background-image: url('Images/Fond.png'); /* Chemin vers votre image */
+    background-image: url('Images/Ressources/Fond.png'); /* Chemin vers votre image */
     background-size: cover; /* Pour couvrir toute la zone sans déformer l'image */
     background-position: center; /* Centrer l'image */
     background-repeat: no-repeat; /* Empêcher la répétition de l'image */
@@ -325,7 +325,7 @@ button:hover {
     width: 325px; /* Diamètre du cercle */
     height: 325px; /* Diamètre du cercle */
     background-color: rgb(0, 0, 0); /* Couleur du cercle */
-    background-image: url('Images/Moi.png');
+    background-image: url('Images/Accueil/Moi.png');
     background-size: cover; /* Pour couvrir toute la zone sans déformer l'image */
     background-position: center; /* Centrer l'image */
     background-repeat: no-repeat; /* Empêcher la répétition de l'image */
@@ -342,7 +342,7 @@ button:hover {
     width: 215px; /* Diamètre du cercle */
     height: 215px; /* Diamètre du cercle */
     background-color: rgb(0, 0, 0); /* Couleur du cercle */
-    background-image: url('Images/Dessin_AB.jpg');
+    background-image: url('Images/Accueil/Dessin_AB.jpg');
     background-size: cover; /* Pour couvrir toute la zone sans déformer l'image */
     background-position: center; /* Centrer l'image */
     background-repeat: no-repeat; /* Empêcher la répétition de l'image */
@@ -358,7 +358,7 @@ button:hover {
     width: 215px; /* Diamètre du cercle */
     height: 215px; /* Diamètre du cercle */
     background-color: rgb(0, 0, 0); /* Couleur du cercle */
-    background-image: url('Images/Coque_Blues_Brothers.jpg');
+    background-image: url('Images/Accueil/Coque_Blues_Brothers.jpg');
     background-size: cover; /* Pour couvrir toute la zone sans déformer l'image */
     background-position: center; /* Centrer l'image */
     background-repeat: no-repeat; /* Empêcher la répétition de l'image */
@@ -418,15 +418,15 @@ button:hover {
 }
 
 .social-icon.facebook {
-    background-image: url('Images/facebook.svg');
+    background-image: url('Images/Réseaux/facebook.svg');
 }
 
 .social-icon.behance {
-    background-image: url('Images/behance.svg');
+    background-image: url('Images/Réseaux/behance.svg');
 }
 
 .social-icon.instagram {
-    background-image: url('Images/instagram.svg');
+    background-image: url('Images/Réseaux/instagram.svg');
 }
 
 .social-icon:hover { 
