--- a/styleparcours.css
+++ b/styleparcours.css
@@ -230,8 +230,8 @@ button:hover {
 .text9 button,
 .text8 button,
 .text7 button{
-    font-size: 1.6em;
-    width: 650px;
+    font-size: 2em;
+    width: 1041px;
     font-family: 'League Spartan', sans-serif;
     color: white;
     background: rgba(0, 0, 0, 0);
@@ -249,38 +249,44 @@ button:hover {
 
 .text7 button{
     position: absolute; /* Position relative pour utiliser translateX correctement */
-    top: 295px; /* Démarre hors de l'écran en bas */
-    left: -435px; /* Centre horizontalement */
+    top: 325px; /* Démarre hors de l'écran en bas */
+    /*left: -585px; /* Centre horizontalement */
+    left:-776px;
 }
 
 .text8 button{
     position: absolute; /* Position relative pour utiliser translateX correctement */
-    top: 325px; /* Démarre hors de l'écran en bas */
-    left: -365px; /* Centre horizontalement */
+    top: 375px; /* Démarre hors de l'écran en bas */
+    /*left: -503px; /* Centre horizontalement */
+    left:-694px;
 }
 
 .text9 button{
     position: absolute; /* Position relative pour utiliser translateX correctement */
-    top: 355px; /* Démarre hors de l'écran en bas */
-    left: -513px; /* Centre horizontalement */
+    top: 425px; /* Démarre hors de l'écran en bas */
+    /*left: -683px; /* Centre horizontalement */
+    left:-873px;
 }
 
 .text10 button{
     position: absolute; /* Position relative pour utiliser translateX correctement */
-    top: 385px; /* Démarre hors de l'écran en bas */
-    left: -485px; /* Centre horizontalement */
+    top: 475px; /* Démarre hors de l'écran en bas */
+    /*left: -645px; /* Centre horizontalement */
+    left:-837px;
 }
 
 .text11 button{
     position: absolute; /* Position relative pour utiliser translateX correctement */
-    top: 415px; /* Démarre hors de l'écran en bas */
-    left: -488px; /* Centre horizontalement */
+    top: 525px; /* Démarre hors de l'écran en bas */
+    /*left: -652px; /* Centre horizontalement */
+    left:-843px;
 }
 
 .text12 button{
     position: absolute; /* Position relative pour utiliser translateX correctement */
-    top: 445px; /* Démarre hors de l'écran en bas */
-    left: -515px; /* Centre horizontalement */
+    top: 575px; /* Démarre hors de l'écran en bas */
+    /*left: -685px; /* Centre horizontalement */
+    left:-877px;
 }
 
 .circle-indus,
