--- a/stylecustoms.css
+++ b/stylecustoms.css
@@ -426,26 +426,26 @@ button:hover {
     /*flex-direction: column;*/
     position: relative;
     /*left: 130px;*/
-    left: 13.5%;
+    left: 0%; /*13.5%*/
     align-items: center;
     margin-bottom: 10px;
     /*padding: 10px;*/
     max-height: 400px; /* Ajuste la hauteur pour trois vignettes plus marges */
     overflow-y: auto; /* Ajoute le défilement vertical */
    /*direction: rtl; /* Place la barre de défilement à gauche */
-    width: 71%;
+    width: 100%; /*71%*/
     /*width: 1000px;*/
     /*display: flex;*/
     grid-template-columns: repeat(3, 1fr); /* Crée 3 colonnes de largeur égale */
     gap: 10px; /* Espace entre les éléments */
-    padding: 10px; /* Juste pour ajouter un peu de marge sur les côtés */
+   /* padding: 10px; /* Juste pour ajouter un peu de marge sur les côtés */
 }
 
 .thumbnail {
-    width: 71%;
-    height: 325px;
+    /*width: 71%;*/
+   /* height: 600px;*/
     object-fit: cover;
-    margin: 15px 0;
+    /*margin: 15px 0;*/
     align-items: center;
     /*padding: 10px; /* Juste pour ajouter un peu de marge sur les côtés */
     cursor: pointer;
@@ -455,13 +455,64 @@ button:hover {
 .forfait{
     display: flex;
     background: rgba(192, 251, 255, 0.608);
-    width: 200px; /* Fixe la largeur */
+    width: 250px; /* Fixe la largeur */
     height: 325px; /* Fixe la hauteur */
     border: 4px solid #ffffff;
     border-radius: 5%;
+    margin: 15px 0;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     text-align: center; 
 }
+
+.explic{
+    position: absolute; /* Position relative pour utiliser translateX correctement */
+    top:250px;
+    font-size: 0.7em;
+    width: 100%;
+    font-family: 'Glaciale Indifference', sans-serif;
+    display: flex;
+    text-align: center;
+    flex-direction:column;
+}
+
+.photo{
+    display: flex;
+    object-fit:cover;
+    position: relative; 
+    top:0;
+    background: rgba(192, 251, 255, 0);
+    width: 250px; /* Fixe la largeur */
+    height: 250px; /* Fixe la hauteur */
+    border: 4px solid #ffffff;
+    border-radius: 0%;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+
+
+/*.thumbnails-containerP {
+    display: none;
+    /*flex-direction: column;*/
+    /*position: relative;
+    left: 130px;
+    align-items: right;
+    margin-bottom: 10px;
+    max-height: 330px; /* Ajuste la hauteur pour trois vignettes plus marges */
+    /*overflow-y: auto; /* Ajoute le défilement vertical */
+    /*direction: rtl; /* Place la barre de défilement à gauche */
+    /*width: 120px;
+}
+
+.thumbnail {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    margin: 5px 0;
+    cursor: pointer;
+    direction: ltr; /* Réinverser le contenu à l'intérieur */
+/*}*/
+
+
 /*.gallery {
     display: flex;
     flex-direction: column;
