--- a/mainaccueil.css
+++ b/mainaccueil.css
@@ -22,7 +22,7 @@
 @font-face {
     font-family: 'Jonathan';
     src:url('Ressources/Jonathan\ Hetegral.otf') format('truetype');
-    font-weight: normal;
+    font-weight: bold;
     font-style: normal;
 }
 
