--- a/stylecustoms.css
+++ b/stylecustoms.css
@@ -21,9 +21,9 @@
 
 @font-face {
     font-family: 'Jonathan';
-    src:url('Ressources/Jonathan\ Hetegral.otf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+    src:url('Ressources/Ovalshapes\ Free.ttf') format('truetype');
+    font-weight:bold;
+    font-style:normal;
 }
 
 /* Autres styles globaux */
@@ -385,26 +385,27 @@ button:hover {
 }
 
 
-/*.containerG {
+.containerG {
     position: absolute;
-    top:25%;
+    top:28%;
     left:420px;
     width: 72%;
-    height: 450px;
+    height: 420px;
     align-items: center;
     display: flex;
+    overflow-y: auto; /* Ajoute le défilement vertical */
     /*border: 2px solid rgb(255, 255, 255); /* Add a white border */
-/*}
+}
 
 .menu {
     display: flex;
     width: 71%;
     flex-direction: column;
     position: absolute;
-    top:5%;
+    top:0;
     left:15%;
     /*transform: translate(-50%, -50%);*/
-/*}
+}
 
 .category-btn {
     padding: 2px;
@@ -415,7 +416,7 @@ button:hover {
     font-size: 22px;
     background: rgba(0, 0, 0, 0);
     border: 0px solid rgba(255, 255, 255, 0); /* Add a white border */
-    /*border-radius: 20px;
+    border-radius: 20px;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -425,49 +426,99 @@ button:hover {
 .thumbnails-containerG {
     display: none;
     /*flex-direction: column;*/
-    /*position: relative;
+    position: relative;
     /*left: 130px;*/
     /*left: 0%; /*13.5%*/
-    /*align-items: center;
+    align-items: center;
     margin-bottom: 10px;
     /*padding: 10px;*/
     /*max-height: 400px; /* Ajuste la hauteur pour trois vignettes plus marges */
-    /*overflow-y: auto; /* Ajoute le défilement vertical */
+    overflow-y: auto; /* Ajoute le défilement vertical */
    /*direction: rtl; /* Place la barre de défilement à gauche */
     /*width: 100%; /*71%*/
     /*width: 1000px;*/
     /*display: flex;*/
-    /*grid-template-columns: repeat(3, 1fr); /* Crée 3 colonnes de largeur égale */
-    /*gap: 10px; /* Espace entre les éléments */
+    grid-template-columns: repeat(3, 1fr); /* Crée 3 colonnes de largeur égale */
+    gap: 10px; /* Espace entre les éléments */
    /* padding: 10px; /* Juste pour ajouter un peu de marge sur les côtés */
-/*}
+}
 
 .thumbnail {
     /*width: 71%;*/
-   /* height: 600px;*/
-    /*object-fit: cover;
+    /*height: 600px;*/
+    object-fit: cover;
     /*margin: 15px 0;*/
-    /*align-items: center;
-    /*padding: 10px; /* Juste pour ajouter un peu de marge sur les côtés */
-    /*cursor: pointer;
+    align-items: center;
+    padding: 10px; /* Juste pour ajouter un peu de marge sur les côtés */
+    cursor: pointer;
     direction: ltr; /* Réinverser le contenu à l'intérieur */
-/*}
+}
+
+.containerF{
+        /*flex-direction: column;*/
+        position: relative;
+        /*left: 130px;*/
+        left: 0%; /*13.5%*/
+        align-items: center;
+        margin-bottom: 10px;
+        /*padding: 10px;*/
+        max-height: 400px; /* Ajuste la hauteur pour trois vignettes plus marges */
+        overflow-y: auto; /* Ajoute le défilement vertical */
+        direction: rtl; /* Place la barre de défilement à gauche */
+        /*width: 100%; /*71%*/
+        /*width: 1000px;*/
+        /*display: flex;*/
+        /*grid-template-columns: repeat(3, 1fr); /* Crée 3 colonnes de largeur égale */
+        gap: 10px; /* Espace entre les éléments */
+       /* padding: 10px; /* Juste pour ajouter un peu de marge sur les côtés */
+}
 
 .forfait{
     display: flex;
     background: rgba(192, 251, 255, 0.608);
-    width: 250px; /* Fixe la largeur */
-    /*height: 325px; /* Fixe la hauteur */
-    /*border: 4px solid #ffffff;
+    width: 225px; /* Fixe la largeur */
+    height: 400px; /* Fixe la hauteur */
+    border: 4px solid #ffffff;
     border-radius: 5%;
-    margin: 15px 0;
+    /*margin: 15px 0;*/
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     text-align: center; 
+    align-items: center;
+}
+
+.textfT{
+    font-family: 'Jonathan', sans-serif;
+    color:rgb(118, 38, 124);
+    font-size: 2.6em;
+    width: 225px;
+   padding: 0;
+    text-align: center; 
+    position:relative;
+    top:-40%;
+}
+
+.wave {
+    width: 175px;
+    height: 2.5px; /* Adjust height as needed */
+    padding: 0,0;
+    left:25px;
+    top:15%;
+    background-color: #eab2c2;
+    display: flex;
+    position: relative;
+}
+
+.containerP{
+    flex-direction: column;
+    position: relative;
+    left: 0%;
+    align-items: center;
+    margin-bottom: 10px;
+    max-height: 400px; /* Ajuste la hauteur pour trois vignettes plus marges */
+    overflow-y: auto; /* Ajoute le défilement vertical */
 }
 
 .explic{
-    position: absolute; /* Position relative pour utiliser translateX correctement */
-    /*top:250px;
     font-size: 0.7em;
     width: 100%;
     font-family: 'Glaciale Indifference', sans-serif;
@@ -482,122 +533,15 @@ button:hover {
     position: relative; 
     top:0;
     background: rgba(192, 251, 255, 0);
-    width: 250px; /* Fixe la largeur */
-    /*height: 250px; /* Fixe la hauteur */
+   /* width: 250px; /* Fixe la largeur */
+    height: 250px; /* Fixe la hauteur */
+    flex-direction:row;
+    gap: 10px; /* Espace entre les éléments */
+    overflow-y: auto; /* Ajoute le défilement vertical */
     /*border: 4px solid #ffffff;
     border-radius: 0%;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);*/
 }
-
-/* Container général */
-.containerG {
-    position: absolute;
-    top: 25%;
-    left: 420px;
-    width: 72%;
-    height: 450px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-/* Menu */
-.menu {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-}
-
-.category-btn {
-    padding: 2px;
-    margin: 5px 0;
-    cursor: pointer;
-    font-family: 'League Spartan', sans-serif;
-    color: white;
-    font-size: 22px;
-    background: rgba(0, 0, 0, 0);
-    border: 0px solid rgba(255, 255, 255, 0); /* Add a white border */
-    border-radius: 20px;
-    text-align: center;
-}
-
-.thumbnails-containerG {
-    display: none;
-    width: 100%;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-/* Texte explicatif */
-.explic {
-    margin: 20px 0;
-    font-size: 0.9em;
-    width: 100%;
-    font-family: 'Glaciale Indifference', sans-serif;
-    text-align: center;
-}
-
-/* Galerie photo */
-.gallery {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    gap: 10px;
-    justify-content: center;
-}
-
-.photo {
-    flex: 0 0 auto;
-    width: 250px;
-    height: 250px;
-    border: 4px solid #ffffff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.photo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.thumbnail {
-    cursor: pointer;
-}
-
-.forfait {
-    display: flex;
-    background: rgba(192, 251, 255, 0.608);
-    width: 250px;
-    height: 325px;
-    border: 4px solid #ffffff;
-    border-radius: 5%;
-    margin: 15px 0;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-/*.thumbnails-containerP {
-    display: none;
-    /*flex-direction: column;*/
-    /*position: relative;
-    left: 130px;
-    align-items: right;
-    margin-bottom: 10px;
-    max-height: 330px; /* Ajuste la hauteur pour trois vignettes plus marges */
-    /*overflow-y: auto; /* Ajoute le défilement vertical */
-    /*direction: rtl; /* Place la barre de défilement à gauche */
-    /*width: 120px;
-}
-
-.thumbnail {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    margin: 5px 0;
-    cursor: pointer;
-    direction: ltr; /* Réinverser le contenu à l'intérieur */
-/*}*/
 
 
 /*.gallery {
