--- a/stylecustoms.css
+++ b/stylecustoms.css
@@ -21,7 +21,7 @@
 
 @font-face {
     font-family: 'Jonathan';
-    src:url('Ressources/Ovalshapes\ Free.ttf') format('truetype');
+    src:url('Ressources/Jonathan\ Hetegral.otf') format('truetype');
     font-weight:bold;
     font-style:normal;
 }
@@ -388,8 +388,8 @@ button:hover {
 .containerG {
     position: absolute;
     top:28%;
-    left:420px;
-    width: 72%;
+    left:220px;
+    width: 98%;
     height: 420px;
     align-items: center;
     display: flex;
@@ -454,77 +454,122 @@ button:hover {
     direction: ltr; /* Réinverser le contenu à l'intérieur */
 }
 
-.containerF{
-        /*flex-direction: column;*/
-        position: relative;
-        /*left: 130px;*/
-        left: 0%; /*13.5%*/
-        align-items: center;
-        margin-bottom: 10px;
-        /*padding: 10px;*/
-        max-height: 400px; /* Ajuste la hauteur pour trois vignettes plus marges */
-        overflow-y: auto; /* Ajoute le défilement vertical */
-        direction: rtl; /* Place la barre de défilement à gauche */
-        /*width: 100%; /*71%*/
-        /*width: 1000px;*/
-        /*display: flex;*/
-        /*grid-template-columns: repeat(3, 1fr); /* Crée 3 colonnes de largeur égale */
-        gap: 10px; /* Espace entre les éléments */
-       /* padding: 10px; /* Juste pour ajouter un peu de marge sur les côtés */
-}
-
 .forfait{
     display: flex;
-    background: rgba(192, 251, 255, 0.608);
-    width: 225px; /* Fixe la largeur */
-    height: 400px; /* Fixe la hauteur */
+    background: rgba(192, 251, 255, 0.838);
+    width: 350px; /* Fixe la largeur */
+    height: 550px; /* Fixe la hauteur */
     border: 4px solid #ffffff;
-    border-radius: 5%;
-    /*margin: 15px 0;*/
+    border-radius: 15%;
+    margin: 15px 0;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     text-align: center; 
     align-items: center;
+    flex-direction: column;
 }
 
 .textfT{
     font-family: 'Jonathan', sans-serif;
     color:rgb(118, 38, 124);
-    font-size: 2.6em;
-    width: 225px;
-   padding: 0;
+    font-size: 1.6em;
+    width: 300px;
     text-align: center; 
     position:relative;
-    top:-40%;
+    /*top:-38%;*/
+    line-height: 0;
 }
 
 .wave {
-    width: 175px;
+    width: 275px;
     height: 2.5px; /* Adjust height as needed */
-    padding: 0,0;
-    left:25px;
-    top:15%;
+    /*left:25px;*/
+    /*top:15%;*/
     background-color: #eab2c2;
     display: flex;
     position: relative;
 }
 
+.textfAP{
+    font-family: 'Glaciale Indifference', sans-serif;
+    color:rgb(255, 255, 255);
+    font-size: 0.5em;
+    width: 325px;
+    text-align: center; 
+    position:relative;
+    /*top:-38%;*/
+    line-height: 0;
+}
+
+.textfP{
+    font-family: 'Jonathan', sans-serif;
+    color:rgb(118, 38, 124);
+    font-size: 1.6em;
+    width: 325px;
+    text-align: center; 
+    position:relative;
+   /*top:-38%;*/
+    line-height: 0;
+}
+
+.textfTy{
+    font-family: 'Glaciale Indifference', sans-serif;
+    color:rgb(255, 255, 255);
+    font-size: 0.7em;
+    width: 325px;
+    text-align: center; 
+    position:relative;
+    /*top:-38%;*/
+    line-height: 0;
+}
+
+.textfD{
+    font-family: 'Glaciale Indifference', sans-serif;
+    color:rgb(118, 38, 124);
+    font-size: 0.6em;
+    width: 300px;
+    /*margin-left: 15px;*/
+    /*margin-right: 15px;*/
+    text-align: left; 
+    position:relative;
+    /*top:-38%;*/
+    line-height: 1.5;
+}
+
+.photof{
+    position:relative;
+    display: flex;
+    object-fit:cover;
+    width: 200px; /* Fixe la largeur */
+    height: 200px; /* Fixe la hauteur */
+    border-radius: 5%;
+    /*border: 4px solid #ffffff;*/
+}
+
+
 .containerP{
     flex-direction: column;
     position: relative;
-    left: 0%;
+    /*left: 0%;*/
     align-items: center;
     margin-bottom: 10px;
-    max-height: 400px; /* Ajuste la hauteur pour trois vignettes plus marges */
+    /*max-height: 400px; /* Ajuste la hauteur pour trois vignettes plus marges */
     overflow-y: auto; /* Ajoute le défilement vertical */
+    grid-column: 2; /* Place ce conteneur dans la deuxième colonne (au milieu) */
 }
 
 .explic{
-    font-size: 0.7em;
-    width: 100%;
-    font-family: 'Glaciale Indifference', sans-serif;
     display: flex;
-    text-align: center;
-    flex-direction:column;
+    text-align: center; 
+    align-items: center;
+    justify-content: center; /* Centre le contenu horizontalement */
+    flex-direction: column;
+    font-size: 0.7em;
+    position: relative;
+    /*width: 80%;*/
+    padding-right: 35px;
+    padding-left: 35px;
+    font-family: 'Glaciale Indifference', sans-serif;
+    grid-column: 2; /* Place ce conteneur dans la deuxième colonne (au milieu) */
 }
 
 .photo{
